--- a/website/index.html
+++ b/website/index.html
@@ -43,7 +43,7 @@
     .logo-container {
       position: absolute;
       left: 50%;
-      top: 56%; /* slightly lowered */
+      top: 56%; /* lowered from 50% */
       transform: translate(-50%, -50%);
       display: flex;
       align-items: center;
@@ -72,13 +72,13 @@
       user-select: none;
     }
 
-    /* Menu icon slightly bigger and moved down */
+    /* Menu icon slightly bigger for alignment */
     .icon-btn.menu-toggle {
       width: 24px;
       height: 24px;
       position: relative;
       cursor: pointer;
-      margin-top: 3px; /* nudged down */
+      margin-top: 3px;
       margin-left: 0;
       user-select: none;
     }
@@ -111,7 +111,7 @@
       transform: rotate(-45deg);
     }
 
-    /* Cart icon styling */
+    /* Cart icon higher only */
     .icon-btn.cart-toggle {
       width: 24px;
       height: 24px;
@@ -165,7 +165,52 @@
       user-select: none;
     }
 
-    /* Sidebar styles */
+    .image-box {
+      margin-top: 64px;
+      width: 100%;
+      height: 400px;
+      background: black;
+      overflow: hidden;
+      position: relative;
+    }
+
+    .slider {
+      display: flex;
+      width: 300%;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    .slide {
+      flex: 0 0 100%;
+      height: 400px;
+      background-size: cover;
+      background-position: center;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 18px;
+      height: 18px;
+      border: solid white;
+      border-width: 0 3px 3px 0;
+      padding: 6px;
+      cursor: pointer;
+      z-index: 2;
+      user-select: none;
+    }
+
+    .arrow.left {
+      left: 10px;
+      transform: translateY(-50%) rotate(135deg);
+    }
+
+    .arrow.right {
+      right: 10px;
+      transform: translateY(-50%) rotate(-45deg);
+    }
+
     .sidebar, .cart-sidebar {
       position: fixed;
       top: 0;
@@ -177,7 +222,7 @@
       z-index: 1100;
       overflow-y: auto;
       height: 100vh;
-      text-align: center; /* Center sidebar menu text */
+      text-align: center; /* center all sidebar menu text */
       padding-top: 80px;
     }
 
@@ -196,7 +241,7 @@
       transform: translateX(0);
     }
 
-    /* Sidebar nav */
+    /* Sidebar menu links styling */
     .sidebar nav {
       display: flex;
       flex-direction: column;
@@ -207,6 +252,7 @@
       align-items: center;
     }
 
+    /* Underline only exactly under text */
     .sidebar nav a {
       color: black;
       text-decoration: none;
@@ -220,25 +266,28 @@
       position: relative;
       user-select: none;
       display: inline-block;
-      max-width: max-content;
+      max-width: max-content; /* shrink underline width to text only */
       margin: 0 auto;
     }
 
+    /* Hover underline for all links */
     .sidebar nav a:hover {
       border-bottom-color: currentColor;
     }
 
+    /* Selected link style - less bold */
     .sidebar nav a.current {
       color: #555555;
       font-weight: 550;
       border-bottom-color: #555555;
     }
 
+    /* Underline on hover even on selected */
     .sidebar nav a.current:hover {
       border-bottom-color: #555555;
     }
 
-    /* POLICIES link arrow */
+    /* POLICIES link special arrow */
     .sidebar nav a.policies-link::after {
       content: "";
       position: absolute;
@@ -264,12 +313,13 @@
       transform: translateY(-50%) rotate(90deg);
     }
 
+    /* Show arrow on hover or if open */
     .sidebar nav a.policies-link:hover::after {
       opacity: 1;
       transform: translateY(-50%) rotate(45deg);
     }
 
-    /* Policies dropdown */
+    /* Dropdown container for policies */
     .policies-dropdown {
       max-height: 0;
       overflow: hidden;
@@ -278,7 +328,7 @@
       flex-direction: column;
       gap: 12px;
       margin-left: 16px;
-      font-size: 18px;
+      font-size: 18px; /* smaller font than main policies link */
       font-weight: 400;
       color: black;
       user-select: none;
@@ -293,6 +343,7 @@
       margin-top: 8px;
     }
 
+    /* Dropdown links style */
     .policies-dropdown a {
       color: black;
       text-decoration: none;
@@ -310,6 +361,14 @@
       border-bottom: 1px solid black;
     }
 
+    /* Fade-in animation for product images and text on all screen sizes */
+    .product-image-box, .product-info {
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+      animation-delay: 0.3s;
+    }
+
+    /* Center links on mobile */
     @media (max-width: 767px) {
       .sidebar nav a {
         text-align: center;
@@ -321,7 +380,86 @@
       }
     }
 
-    /* Additional styles omitted for brevity, keep your existing styles */
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+      }
+    }
+
+    .cart-sidebar {
+      right: 0;
+      width: 50vw;
+      max-width: 280px;
+      padding: 80px 20px;
+      transform: translateX(100%);
+      text-align: left;
+    }
+
+    .cart-sidebar.open {
+      transform: translateX(0);
+    }
+
+    .product-image-box {
+      width: 90vw;
+      max-width: 600px;
+      margin: 40px auto 8px auto;
+      background: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: visible;
+      cursor: pointer;
+    }
+
+    .jersey-img {
+      width: 100%;
+      height: auto;
+      object-fit: contain;
+      transition: transform 0.25s ease-in-out;
+      image-rendering: auto;
+    }
+
+    .jersey-img:hover {
+      transform: scale(1.03);
+    }
+
+    .product-info {
+      text-align: center;
+      margin-bottom: 24px;
+      margin-top: 16px;
+      user-select: none;
+    }
+
+    .product-title {
+      font-weight: 700;
+      font-size: 22px;
+      margin-bottom: 4px;
+      cursor: pointer;
+      transition: border-bottom 0.2s ease;
+      user-select: none;
+    }
+
+    .product-title:hover {
+      border-bottom: 1.5px solid black;
+    }
+
+    .product-color {
+      font-weight: 400;
+      font-size: 16px;
+      color: black;
+      margin-bottom: 4px;
+    }
+
+    .product-price {
+      font-weight: 400;
+      font-size: 20px;
+    }
+
+    @media (min-width: 768px) {
+      header {
+        display: flex; /* show header on desktop */
+      }
+    }
   </style>
 </head>
 <body>
@@ -344,7 +482,37 @@
   </div>
 </header>
 
-<!-- Sidebar -->
+<div class="image-box">
+  <div class="slider" id="slider" aria-live="polite">
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');" role="img" aria-label="Slide 1"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');" role="img" aria-label="Slide 2"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');" role="img" aria-label="Slide 3"></div>
+  </div>
+  <div class="arrow left" onclick="prevSlide()" role="button" tabindex="0" aria-label="Previous slide"></div>
+  <div class="arrow right" onclick="nextSlide()" role="button" tabindex="0" aria-label="Next slide"></div>
+</div>
+
+<div style="display: flex; flex-direction: column; align-items: center; margin-top: 40px;">
+  <div class="product-image-box" onclick="location.href='/jersey/red'" role="link" tabindex="0" aria-label="View Red Jersey">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" class="jersey-img" alt="Red Jersey" />
+  </div>
+  <div class="product-info">
+    <div class="product-title" onclick="location.href='/jersey/red'" role="link" tabindex="0" aria-label="View Red Jersey">TWO-FIVE JERSEY</div>
+    <div class="product-color">RED</div>
+    <div class="product-price">$49.99 USD</div>
+  </div>
+
+  <div class="product-image-box" onclick="location.href='/jersey/white'" role="link" tabindex="0" aria-label="View White Jersey">
+    <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" class="jersey-img" alt="White Jersey" />
+  </div>
+  <div class="product-info">
+    <div class="product-title" onclick="location.href='/jersey/white'" role="link" tabindex="0" aria-label="View White Jersey">TWO-FIVE JERSEY</div>
+    <div class="product-color">WHITE</div>
+    <div class="product-price">$49.99 USD</div>
+  </div>
+</div>
+
+<!-- Sidebar with menu items -->
 <nav id="sidebar" class="sidebar" aria-label="Main navigation" aria-hidden="true">
   <nav>
     <a href="https://mattscianna.com/home" class="current">HOME</a>
@@ -353,6 +521,7 @@
     <a href="https://mattscianna.com/contact">CONTACT</a>
     <a href="#" class="policies-link arrow-closed" id="policiesLink" aria-expanded="false" aria-controls="policiesDropdown">POLICIES</a>
     <div id="policiesDropdown" class="policies-dropdown" role="region" aria-hidden="true">
+      <!-- Dropdown items go here -->
       <a href="/return-policy">Return Policy</a>
       <a href="/shipping-policy">Shipping Policy</a>
       <a href="/privacy-policy">Privacy Policy</a>
@@ -370,95 +539,68 @@
   const cartIcon = document.getElementById('cartIcon');
   const cartSidebar = document.getElementById('cartSidebar');
   const policiesLink = document.getElementById('policiesLink');
-  const policiesDropdown = document.getElementById('policiesDropdown');
-  const logoText = document.getElementById('logoText');
-  const logoImage = document.getElementById('logoImage');
-  const logoContainer = document.getElementById('logoContainer');
+  const slider = document.getElementById('slider');
+  let currentSlide = 0;
 
-  // Toggle sidebar menu
+  function updateSlider() {
+    slider.style.transform = `translateX(-${currentSlide * 100}%)`;
+  }
+
+  function nextSlide() {
+    currentSlide = (currentSlide + 1) % 3;
+    updateSlider();
+  }
+
+  function prevSlide() {
+    currentSlide = (currentSlide - 1 + 3) % 3;
+    updateSlider();
+  }
+
   menuToggle.addEventListener('click', () => {
-    const expanded = menuToggle.getAttribute('aria-expanded') === 'true';
-    menuToggle.setAttribute('aria-expanded', String(!expanded));
+    const isOpen = sidebar.classList.toggle('open');
+    document.body.classList.toggle('sidebar-open', isOpen);
     menuToggle.classList.toggle('open');
-    sidebar.classList.toggle('open');
-
-    // Close cart if open
-    if (cartSidebar.classList.contains('open')) {
-      cartSidebar.classList.remove('open');
-      cartIcon.classList.remove('open');
-      cartIcon.setAttribute('aria-expanded', 'false');
-      document.body.classList.remove('cart-open');
-    }
-
-    // Toggle body scroll lock
-    document.body.classList.toggle('sidebar-open', !expanded);
+    menuToggle.setAttribute('aria-expanded', isOpen);
+    sidebar.setAttribute('aria-hidden', !isOpen);
   });
 
-  // Toggle cart sidebar
   cartIcon.addEventListener('click', () => {
-    const expanded = cartIcon.getAttribute('aria-expanded') === 'true';
-    cartIcon.setAttribute('aria-expanded', String(!expanded));
+    const isOpen = cartSidebar.classList.toggle('open');
+    document.body.classList.toggle('cart-open', isOpen);
     cartIcon.classList.toggle('open');
-    cartSidebar.classList.toggle('open');
-
-    // Close sidebar if open
-    if (sidebar.classList.contains('open')) {
-      sidebar.classList.remove('open');
-      menuToggle.classList.remove('open');
-      menuToggle.setAttribute('aria-expanded', 'false');
-      document.body.classList.remove('sidebar-open');
-    }
-
-    // Toggle body scroll lock
-    document.body.classList.toggle('cart-open', !expanded);
+    cartIcon.setAttribute('aria-expanded', isOpen);
+    cartSidebar.setAttribute('aria-hidden', !isOpen);
   });
 
-  // Policies dropdown toggle
-  policiesLink.addEventListener('click', (e) => {
-    e.preventDefault();
-    const expanded = policiesLink.getAttribute('aria-expanded') === 'true';
-    policiesLink.setAttribute('aria-expanded', String(!expanded));
-    policiesLink.classList.toggle('arrow-open', !expanded);
-    policiesLink.classList.toggle('arrow-closed', expanded);
-    policiesDropdown.classList.toggle('open');
-
-    // Accessibility toggle
-    policiesDropdown.setAttribute('aria-hidden', expanded ? 'true' : 'false');
+  policiesLink.addEventListener('click', () => {
+    const isOpen = policiesDropdown.classList.toggle('open');
+    policiesLink.classList.toggle('arrow-open', isOpen);
+    policiesLink.classList.toggle('arrow-closed', !isOpen);
+    policiesLink.setAttribute('aria-expanded', isOpen);
+    policiesDropdown.setAttribute('aria-hidden', !isOpen);
   });
+</script>
 
-  // Logo click reloads page
-  logoContainer.addEventListener('click', () => {
-    location.reload();
-  });
+<!-- Cart Sidebar Contents -->
+<script>
+  // Populate cart sidebar with sample items
+  cartSidebar.innerHTML = `
+    <h2 style="font-size: 20px; margin-bottom: 20px;">Your Cart</h2>
 
-  logoContainer.addEventListener('keydown', (e) => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      location.reload();
-    }
-  });
+    <div style="margin-bottom: 30px;">
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1183.png?raw=true" alt="Red Jersey" style="width: 100%; max-width: 200px; height: auto; margin-bottom: 8px;" />
+      <div style="font-weight: bold;">TWO-FIVE JERSEY</div>
+      <div style="font-size: 14px;">Color: RED</div>
+      <div style="font-size: 16px; margin-top: 4px;">$49.99 USD</div>
+    </div>
 
-  // Scroll event to toggle logo text/image
-  window.addEventListener('scroll', () => {
-    if (window.scrollY > 80) {
-      logoText.style.display = 'none';
-      logoImage.style.display = 'block';
-    } else {
-      logoText.style.display = 'block';
-      logoImage.style.display = 'none';
-    }
-  });
-
-  // Initialize logo state on page load
-  window.addEventListener('load', () => {
-    if (window.scrollY > 80) {
-      logoText.style.display = 'none';
-      logoImage.style.display = 'block';
-    } else {
-      logoText.style.display = 'block';
-      logoImage.style.display = 'none';
-    }
-  });
+    <div>
+      <img src="https://github.com/mattscianna/mattscianna/blob/main/IMG_1178.png?raw=true" alt="White Jersey" style="width: 100%; max-width: 200px; height: auto; margin-bottom: 8px;" />
+      <div style="font-weight: bold;">TWO-FIVE JERSEY</div>
+      <div style="font-size: 14px;">Color: WHITE</div>
+      <div style="font-size: 16px; margin-top: 4px;">$49.99 USD</div>
+    </div>
+  `;
 </script>
 
 </body>
